--- a/blogpost.html
+++ b/blogpost.html
@@ -5,6 +5,9 @@
     </head>
     <body>
         <div id="container">
+            <div id="cabecera">
+                Cabecera
+            </div>
             <div id="post">
                 <h1>Este es el título atractivo einteresante del post XD</h1>
                 <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas... :OOO</p>
